--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <form action="queston" method="post">
-        <h2>奥特问答 —— 李笑笑 （100分，线上作答，做完请截图）</h2>
+        <h2>奥特问答 —— 李笑笑 （100分+30分，线上作答，做完请截图）</h2>
         <p style="color:black; font: 100 600;">一、你最喜欢的四奥(20分)</p>
         <ul style="list-style: none;">
             <li>1.<input type="text">&nbsp;2.<input type="text"></li>
@@ -39,6 +39,30 @@
             <li>希卡利在光之国的职位&nbsp;<input type="text"></li>
             <li>赛罗的师傅&nbsp;<input type="text"></li>
             <li>雷欧的师傅&nbsp;<input type="text"></li>
+        </ol>
+        <p style="color:black; font: 100 600;">五、附加题(30分)</p>
+        <ol>
+            <li>赛罗终极警卫队有几个人？
+                <ol style="list-style-type: lower-alpha;">
+                    <li><input type="radio" name="radio1">3个</li>
+                    <li><input type="radio" name="radio1">4个</li>
+                    <li><input type="radio" name="radio1">5个</li>
+                </ol>
+            </li>
+            <li>银河和初代的关系是
+                <ol style="list-style-type: lower-alpha;">
+                    <li><input type="radio" name="radio1">父子</li>
+                    <li><input type="radio" name="radio1">岳父子</li>
+                    <li><input type="radio" name="radio1">战友</li>
+                </ol>
+            </li>
+            <li>托雷基亚与泰罗的关系是
+                <ol style="list-style-type: lower-alpha;">
+                    <li><input type="radio" name="radio1">夫妻</li>
+                    <li><input type="radio" name="radio1">妇女</li>
+                    <li><input type="radio" name="radio1">岳父子</li>
+                </ol>
+            </li>
         </ol>
     </form>
 </body>
